--- a/scss/bacalhanzzz_th.scss
+++ b/scss/bacalhanzzz_th.scss
@@ -1,3 +1,5 @@
-@import '1 - Bases/root';
-@import '1 - Bases/typography';
-@import '1 - Bases/usefull-classes';
+@import '1 - bases/root';
+@import '1 - bases/typography';
+@import '1 - bases/usefull-classes';
+@import '2 - structure/layout';
+@import '3 - components/popup';
