--- a/scss/1 - Bases/_root.scss
+++ b/scss/1 - Bases/_root.scss
@@ -2,5 +2,23 @@
     // colors
     --color-primary: red;
 
+    // font
+    --font-size-xs: 12px;
+    --font-size-s: 14px;
+    --font-size-base: 16px;
+
     // spaces
+    --space-xs: 4px;
+    --space-s: 8px;
+    --space-base: 16px;
+    --space-m: 24px;
+    --space-l: 32px;
+    --space-xl: 40px;
+    --space-xxl: 48px;
+
+    // border sizes
+    --border-size-soft: 4px;
+    --border-size-medium: 8px;
+    --border-size-rounded: 50px;
+    --border-size-circle: 100%;
 }
