--- a/scss/bacalhanzzz_th.scss
+++ b/scss/bacalhanzzz_th.scss
@@ -2,4 +2,5 @@
 @import '1 - bases/typography';
 @import '1 - bases/usefull-classes';
 @import '2 - structure/layout';
+@import '3 - components/button';
 @import '3 - components/popup';
