--- a/scss/3 - Components/_popup.scss
+++ b/scss/3 - Components/_popup.scss
@@ -16,6 +16,7 @@
     border: 1px solid rgba(209, 213, 219, 0.3);
     border-radius: 12px;
     display: flex;
+    flex-direction: column;
     height: calc(100% - 100px);
     justify-content: center;
     width: calc(100% - 100px);
